{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 21,
  "lineage": "d910baa3-2966-6970-5f00-359152cf5552",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:177556895605:instance/i-008cd9962d185fc5e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008cd9962d185fc5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-011b203ba73466173"
              }
            ],
            "primary_network_interface_id": "eni-011b203ba73466173",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_ip": "44.203.216.221",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a07cdab30d9bec7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03349210ab79d40eb",
            "tags": {
              "Name": "devsecops-agent"
            },
            "tags_all": {
              "Name": "devsecops-agent"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0803c72764b839b0e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177556895605",
            "id": "i-008cd9962d185fc5e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.devsecops_sg",
            "aws_subnet.subnet1",
            "aws_vpc.devsecops_vpc",
            "tls_private_key.terraform_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177556895605:internet-gateway/igw-067c17aa5f4e1b0cf",
            "id": "igw-067c17aa5f4e1b0cf",
            "owner_id": "177556895605",
            "region": "us-east-1",
            "tags": {
              "Name": "devsecops-igw"
            },
            "tags_all": {
              "Name": "devsecops-igw"
            },
            "vpc_id": "vpc-05def315cf0ae3277"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-067c17aa5f4e1b0cf",
            "id": "r-rtb-0d744bd57274753041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0d744bd5727475304",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177556895605",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0d744bd5727475304"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177556895605:route-table/rtb-0d744bd5727475304",
            "id": "rtb-0d744bd5727475304",
            "owner_id": "177556895605",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "devsecops-route-table"
            },
            "tags_all": {
              "Name": "devsecops-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05def315cf0ae3277"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177556895605",
            "id": "rtb-0d744bd5727475304",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb453c135432bbe1",
            "region": "us-east-1",
            "route_table_id": "rtb-0d744bd5727475304",
            "subnet_id": "subnet-03349210ab79d40eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.subnet1",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acafd157e5474a8d",
            "region": "us-east-1",
            "route_table_id": "rtb-0d744bd5727475304",
            "subnet_id": "subnet-0b436b29477d0cde0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.subnet2",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devsecops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177556895605:security-group/sg-0803c72764b839b0e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0803c72764b839b0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30007,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30007
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "terraform-20260317070420748100000002",
            "name_prefix": "terraform-",
            "owner_id": "177556895605",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devsecops-security-group"
            },
            "tags_all": {
              "Name": "devsecops-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05def315cf0ae3277"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177556895605",
            "id": "sg-0803c72764b839b0e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177556895605:subnet/subnet-03349210ab79d40eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03349210ab79d40eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177556895605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devsecops-subnet-1"
            },
            "tags_all": {
              "Name": "devsecops-subnet-1"
            },
            "vpc_id": "vpc-05def315cf0ae3277"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177556895605",
            "id": "subnet-03349210ab79d40eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177556895605:subnet/subnet-0b436b29477d0cde0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b436b29477d0cde0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177556895605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devsecops-subnet-2"
            },
            "tags_all": {
              "Name": "devsecops-subnet-2"
            },
            "vpc_id": "vpc-05def315cf0ae3277"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177556895605",
            "id": "subnet-0b436b29477d0cde0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devsecops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177556895605:vpc/vpc-05def315cf0ae3277",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ede527d553977e85",
            "default_route_table_id": "rtb-0d5224ac2bd3f9071",
            "default_security_group_id": "sg-0bd440ee6e3485c35",
            "dhcp_options_id": "dopt-08d6e044445d1c45f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05def315cf0ae3277",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5224ac2bd3f9071",
            "owner_id": "177556895605",
            "region": "us-east-1",
            "tags": {
              "Name": "devsecops-vpc"
            },
            "tags_all": {
              "Name": "devsecops-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177556895605",
            "id": "vpc-05def315cf0ae3277",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}